# isekai-dashboard

./: .gitignore  CLAUDE.md  LINUX.md  Makefile  PLAN.md  PYPI.md  README.md  UI_UX_IMPROVEMENTS.md  config.py  config.toml  db_init.py  english_vocab_extractor.py  example_english_vocab.csv  example_vocab.csv  fgo_quotes.md  import_vocab.py  ingest_csv.py  main.py  more_vocab.csv  pyproject.toml  test_cal.swift  test_listview.py  test_mouse.py  test_pr_btn.py  test_textual_drag.py  test_textual_drag2.py  vocab_extractor.py
clients/: calendar_client.py  github_client.py  llm_client.py  media_client.py
core/: db.py  kana_romaji.py  models.py
services/: english_srs_service.py  kanji_srs_service.py  notes_service.py  quests_service.py  srs_service.py  xp_service.py
tests/: conftest.py  test_clients.py  test_daily_quests_ui.py  test_english_srs_service.py  test_kanji_srs_service.py  test_quests_service.py  test_srs_service.py
ui/: styles.tcss  styles_settings.tcss
ui/screens/: settings_screen.py
ui/widgets/: calendar.py  daily_quests.py  english_card.py  kana_card.py  kanji_card.py  notes.py  now_playing.py  pomodoro.py  productivity_tabs.py  pull_requests.py  srs_stats.py  srs_tabs.py  srs_utils.py  xp_bar.py
